sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:7: error: ';' expected but integer literal found.
    while(getValeur(j-1)>temp)&&j>0{
                                  ^